--- a/style.css
+++ b/style.css
@@ -15,3 +15,43 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header {
+  color: #2E3440;
+  font-size: 3em;
+  font-weight: bold;
+  padding: .5em 0;
+}
+
+.game-container {
+  display: grid;
+  grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+  background-color: #2E3440;
+  height: 600px;
+  width: 600px;
+  border-radius: 2em;
+  margin: 2em;
+  gap: 2px;
+}
+
+.board-module-container {
+  display: flex;
+  background-color: #D8DEE9;
+}
+
+.board-module {
+  width: 100%;
+  margin: .6em;
+}
+
+.board-module:hover {
+  background-color: #E5E9F075;
+  box-shadow: 0 0 15px 1px #E5E9F0;
+  border-radius: 1em;
+}
